# SITA

./: .gitignore  README.md  eval_only.py  pyproject.toml  slerp_eval_sweep.py  slerp_merge.py
configs/: dfk_vlm_dataset_v4.yaml  hf_sft_causal_lm.yaml  lora_causal_lm.yaml  lora_custom_loop.yaml  lora_vlm.yaml  qlora_causal_lm.yaml  unsloth_lora_causal_lm.yaml  unsloth_rft_vlm_qwen35.yaml  unsloth_vlm_qwen35.yaml
examples/: getting_started.ipynb
notebooks/: batch_eval_colab.py
sita/: __init__.py  runner.py
sita/adapters/: __init__.py  lora.py  prefix_tuning.py  qlora.py  unsloth_lora.py  unsloth_vlm_lora.py
sita/core/: __init__.py  base_adapter.py  base_dataset.py  base_evaluator.py  base_model.py  base_trainer.py  config.py  registry.py
sita/datasets/: __init__.py  dfk_text_dataset.py  dfk_text_dataset_v2.py  dfk_vlm_captioning.py  dfk_vlm_dataset.py  dfk_vlm_dataset_v2.py  dfk_vlm_dataset_v3.py  dfk_vlm_dataset_v4.py  dfk_vlm_image_only.py  hf_dataset.py  keyword_dataset.py
sita/evaluators/: keyword_gen_evaluator.py  loss_evaluator.py  text_gen_evaluator.py  text_gen_v3_evaluator.py  vlm_captioning_evaluator.py  vlm_gen_evaluator.py
sita/models/: __init__.py  hf_causal_lm.py  hf_vlm.py  unsloth_causal_lm.py  unsloth_vlm.py
sita/templates/: __init__.py  ministral_3.jinja  qwen3.5_chatml.jinja
sita/trainers/: __init__.py  custom_loop.py  hf_sft_trainer.py  hf_trainer.py  rejection_sampling_vlm.py  unsloth_vlm_sft.py
sita/validators/: __init__.py  dfk_validator.py
